--- a/index.html
+++ b/index.html
@@ -1,260 +1,59 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gấu Bông</title>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Website Tỏ Tình</title>
 </head>
 <body>
+  <h1>Anh yêu em 💖</h1>
 
-  <div class="filter-bar">
-      <div class="filter-left">
-        <select class="filter-select">
-          <option selected hidden>Khoảng Giá</option>
-          <option>Tất cả</option>
-          <option>Dưới 300.000 đ</option>
-          <option>Từ 300.000 đ - 500.000 đ</option>
-          <option>Từ 500.000 đ - 1.000.000 đ</option>
-          <option>Từ 1.00.000 đ - 2.000.000 đ</option>
-          <option>Từ 2.00.000 đ - 3.000.000 đ</option>
-        </select>
-      </div>
-      <div class="filter-right">
-        <span class="product-total">1012 Sản phẩm CỬA HÀNG</span>
-        <select class="filter-select">
-          <option>Mới nhất</option>
-          <option>Bán chạy nhất</option>
-          <option>Giá : Thấp đến cao</option>
-          <option>Giá : Cao đến thấp</option>
-          <option>% Giảm giá</option>
-          <option>Nổi bật</option>
-        </select>
-      </div>
-  </div>
-  <!-- dv1 -->
-  <div class="container-product">
-    <p class="tieude">GẤU BÔNG SIÊU SALE</p>
-    <div class="products">
-      <!-- SP 1 -->
-      <div class="product">
-        <div class="image-wrapper">
-          <img src="img/image28.png" alt="Gấu Bông" />
-          <img
-            src="img/Gau-Bong-Capybara-Ca-Sau-1-500x500.jpg"
-            class="image-hover"
-            alt="Gấu Bông Hover"
-          />
-          <img src="img/Rectangle 3.png" class="logo-left" alt="logo" />
-          <div class="saleTag">-30%</div>
-          <button class="buy-now-btn">
-            <img
-              src="img/pink-teddy-bear-icon-vector-behance-hd-flat-colored-outline_675131_wh860-removebg-preview.png"
-              class="bear-left"
-              alt="Bear Left"
-            />
-            MUA NGAY
-            <img
-              src="img/pink-teddy-bear-icon-vector-behance-hd-flat-colored-outline_675131_wh860-removebg-preview.png"
-              class="bear-right"
-              alt="Bear Right"
-            />
-          </button>
-        </div>
+  <script>
+    // Vẽ bầu trời sao
+    function createStars(num) {
+      for (let i = 0; i < num; i++) {
+        const star = document.createElement("div");
+        star.className = "star";
+        // Kích thước và vị trí ngẫu nhiên
+        const size = Math.random() * 2.2 + 0.8;
+        star.style.width = size + "px";
+        star.style.height = size + "px";
+        star.style.left = Math.random() * 100 + "vw";
+        star.style.top = Math.random() * 100 + "vh";
+        star.style.animationDuration = (1.5 + Math.random() * 2) + "s";
+        star.style.opacity = 0.4 + Math.random() * 0.6;
+        document.body.appendChild(star);
+      }
+    }
+    createStars(130);
 
-        <p>Gấu Bông Baby Three Thỏ Thị Trấn</p>
-        <div class="prices-sale">
-          <div class="price">132.500 đ</div>
-          <div class="price-sale">120.000 đ</div>
-        </div>
-        <div class="sizes">
-          <span class="size-box active">40cm</span>
-          <span class="size-box">50cm</span>
-          <span class="size-box">70cm</span>
-        </div>
-      </div>
+    // Chữ rơi từ trên
+    const words = ["Cục cưng à", "Em là cả thế giới", "Mãi bên nhau","Cô gái xinh nhất", "💘", "💖", "💕"];
+    setInterval(() => {
+      const text = document.createElement("div");
+      text.className = "falling-text";
+      text.textContent = words[Math.floor(Math.random() * words.length)];
+      text.style.left = Math.random() * (window.innerWidth - 120) + "px";
+      text.style.animationDuration = (2.4 + Math.random() * 1.7) + "s";
+      document.body.appendChild(text);
+      setTimeout(() => text.remove(), 6000);
+    }, 350);
 
-      <!-- SP 2 -->
-      <div class="product">
-        <div class="image-wrapper">
-          <img src="img/image28.png" alt="Gấu Bông" />
-          <img
-            src="img/Gau-Bong-Capybara-Ca-Sau-1-500x500.jpg"
-            class="image-hover"
-            alt="Gấu Bông Hover"
-          />
-          <img src="img/Rectangle 3.png" class="logo-left" alt="logo" />
-          <div class="saleTag">-30%</div>
-          <button class="buy-now-btn">
-            <img
-              src="img/pink-teddy-bear-icon-vector-behance-hd-flat-colored-outline_675131_wh860-removebg-preview.png"
-              class="bear-left"
-              alt="Bear Left"
-            />
-            MUA NGAY
-            <img
-              src="img/pink-teddy-bear-icon-vector-behance-hd-flat-colored-outline_675131_wh860-removebg-preview.png"
-              class="bear-right"
-              alt="Bear Right"
-            />
-          </button>
-        </div>
+    // Trái tim rơi xuống nhỏ
+    setInterval(() => {
+      const heart = document.createElement("div");
+      heart.className = "heart";
+      heart.textContent = "❤️";
+      heart.style.left = Math.random() * (window.innerWidth - 40) + "px";
+      heart.style.fontSize = (0.8 + Math.random() * 0.6) + "rem";
+      heart.style.animationDuration = (2.5 + Math.random() * 1.5) + "s";
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 5000);
+    }, 250);
 
-        <p>Gấu Bông Baby Three Thỏ Thị Trấn</p>
-        <div class="prices-sale">
-          <div class="price">132.500 đ</div>
-          <div class="price-sale">120.000 đ</div>
-        </div>
-        <div class="sizes">
-          <span class="size-box active">40cm</span>
-          <span class="size-box">50cm</span>
-          <span class="size-box">70cm</span>
-        </div>
-      </div>
-
-      <!-- SP 3 -->
-      <div class="product">
-        <div class="image-wrapper">
-          <img src="img/image28.png" alt="Gấu Bông" />
-          <img
-            src="img/Gau-Bong-Capybara-Ca-Sau-1-500x500.jpg"
-            class="image-hover"
-            alt="Gấu Bông Hover"
-          />
-          <img src="img/Rectangle 3.png" class="logo-left" alt="logo" />
-          <div class="saleTag">-30%</div>
-          <button class="buy-now-btn">
-            <img
-              src="img/pink-teddy-bear-icon-vector-behance-hd-flat-colored-outline_675131_wh860-removebg-preview.png"
-              class="bear-left"
-              alt="Bear Left"
-            />
-            MUA NGAY
-            <img
-              src="img/pink-teddy-bear-icon-vector-behance-hd-flat-colored-outline_675131_wh860-removebg-preview.png"
-              class="bear-right"
-              alt="Bear Right"
-            />
-          </button>
-        </div>
-
-        <p>Gấu Bông Baby Three Thỏ Thị Trấn</p>
-        <div class="prices-sale">
-          <div class="price">132.500 đ</div>
-          <div class="price-sale">120.000 đ</div>
-        </div>
-        <div class="sizes">
-          <span class="size-box active">40cm</span>
-          <span class="size-box">50cm</span>
-          <span class="size-box">70cm</span>
-        </div>
-      </div>
-
-      <!-- SP 4 -->
-      <div class="product">
-        <div class="image-wrapper">
-          <img src="img/image28.png" alt="Gấu Bông" />
-          <img
-            src="img/Gau-Bong-Capybara-Ca-Sau-1-500x500.jpg"
-            class="image-hover"
-            alt="Gấu Bông Hover"
-          />
-          <img src="img/Rectangle 3.png" class="logo-left" alt="logo" />
-          <div class="saleTag">-30%</div>
-          <button class="buy-now-btn">
-            <img
-              src="img/pink-teddy-bear-icon-vector-behance-hd-flat-colored-outline_675131_wh860-removebg-preview.png"
-              class="bear-left"
-              alt="Bear Left"
-            />
-            MUA NGAY
-            <img
-              src="img/pink-teddy-bear-icon-vector-behance-hd-flat-colored-outline_675131_wh860-removebg-preview.png"
-              class="bear-right"
-              alt="Bear Right"
-            />
-          </button>
-        </div>
-
-        <p>Gấu Bông Baby Three Thỏ Thị Trấn</p>
-        <div class="prices-sale">
-          <div class="price">132.500 đ</div>
-          <div class="price-sale">120.000 đ</div>
-        </div>
-        <div class="sizes">
-          <span class="size-box active">40cm</span>
-          <span class="size-box">50cm</span>
-          <span class="size-box">70cm</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="see-more">
-      <a href="#">XEM THÊM <i class="fa-solid fa-greater-than"></i></a>
-    </div>
-  </div>
-  <!-- dv2 -->
-
-  <!-- dv3 -->
-
-  <!-- dv4 -->
-
-  <div class="pagination">
-    <a class="printer" href="#">1</a>
-    <a href="#">2</a>
-    <a href="#">&#8250;</a> <!-- dấu > -->
-    <a href="#">&#187;</a> <!-- dấu >> -->
-  </div>
-
-  <!-- PHẦN INSTAGRAM -->
-<div class="instagram-section">
-  <div class="instagram-container">
-    <div class="instagram-header">
-      <div class="instagram-title">
-        @MiMiBear
-      </div>
-      <a href="https://www.instagram.com/mimivear" target="_blank" rel="noopener" class="instagram-btn">
-        THEO DÕI INSTAGRAM MIMIVEAR
-        <svg style="margin-left:10px;" width="16" height="16" fill="none" viewBox="0 0 16 16">
-          <circle cx="8" cy="8" r="7.25" stroke="#231f20" stroke-width="1.5"/>
-          <circle cx="8" cy="8" r="3.5" stroke="#231f20" stroke-width="1.5"/>
-          <circle cx="12.25" cy="3.75" r="0.75" fill="#231f20"/>
-        </svg>
-      </a>
-    </div>
-    <div class="instagram-main">
-      <div class="instagram-left">
-        <img src="img/Container.png" alt="MiMiBear Quà 1/6" class="instagram-bigimg">
-      </div>
-      <div class="instagram-right">
-        <div class="instagram-grid">
-          <img src="img/image 70.png" alt="MiMiBear">
-          <img src="img/image 70.png" alt="MiMiBear">
-          <img src="img/image 70.png" alt="MiMiBear">
-          <img src="img/image 70.png" alt="MiMiBear">
-          <img src="img/image 70.png" alt="MiMiBear">
-          <img src="img/image 70.png" alt="MiMiBear">
-          <img src="img/image 70.png" alt="MiMiBear">
-          <img src="img/image 70.png" alt="MiMiBear">
-        </div>
-      </div>
-    </div>
-    <div class="instagram-quote-block">
-      <div class="instagram-quote">
-        "MiMiBear – Từ những chú gấu bông đầu tiên<br>
-        đến thương hiệu được hàng ngàn khách hàng yêu mến"
-      </div>
-      <div class="instagram-dots">
-        <span class="instagram-dot active"></span>
-        <span class="instagram-dot inactive"></span>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
+    function showQR() {
+      document.getElementById("qrModal").style.display = "flex";
+    }
+  </script>
 </body>
 </html>
