--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body>
-  <h1> Cô gái ah iu 💖</h1>
+  <h1> Làm ny của mik nhá 💖</h1>
   <div class="button-container">
     <button class="love-btn" onclick="acceptLove()">Đồng ý</button>
     <button class="no-btn" onclick="denyLove()">Không đồng ý</button>
