--- a/index.html
+++ b/index.html
@@ -5,35 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Website Tỏ Tình</title>
   <link rel="stylesheet" href="qr.css">
-  <style>
-    /* Custom SweetAlert2 background */
-    .swal2-popup {
-      background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%) !important;
-      color: #fff !important;
-      border: 2px solid #ff69b4 !important;
-      box-shadow: 0 0 24px #ffb6e0cc, 0 0 0px #fff;
-    }
-    .swal2-title {
-      color: #ffb6e0 !important;
-      text-shadow: 0 2px 8px #ff69b4, 0 0 2px #fff;
-    }
-    .swal2-confirm {
-      background: linear-gradient(45deg, #ff79bc, #ffb6e0) !important;
-      color: #fff !important;
-      font-weight: bold;
-      border-radius: 20px !important;
-      box-shadow: 0 2px 8px #ff69b4a8;
-    }
-  </style>
+  <link rel="stylesheet" href="sweetalert-custom.css">
 </head>
 <body>
+  <!-- Player YouTube API sẽ nhúng ở đây -->
+  <div id="player"></div>
+
   <h1> Làm ny của mik nhá 💖</h1>
   <div class="button-container">
     <button class="love-btn" onclick="acceptLove()">Đồng ý</button>
     <button class="no-btn" onclick="denyLove()">Không đồng ý</button>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- YouTube Iframe API -->
   <script>
+    // Tải YouTube Iframe API
+    var tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    var player;
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('player', {
+        height: '0',
+        width: '0',
+        videoId: 'N-SxEhtl8LQ', // ID video YouTube của bạn
+        playerVars: {
+          'autoplay': 0,
+          'loop': 1,
+          'playlist': 'N-SxEhtl8LQ'
+        }
+      });
+    }
+
+    // Khi click lần đầu, phát nhạc YouTube có tiếng
+    document.body.addEventListener('click', function() {
+      if (player && typeof player.playVideo === 'function') {
+        player.unMute();
+        player.playVideo();
+      }
+    }, { once: true });
+
     // Vẽ bầu trời sao
     function createStars(num) {
       for (let i = 0; i < num; i++) {
@@ -63,6 +77,28 @@
       setTimeout(() => text.remove(), 6000);
     }, 350);
 
+    // Danh sách các ảnh muốn rơi
+    const fallImages = [
+      'https://scontent.fsgn5-9.fna.fbcdn.net/v/t39.30808-6/480937542_647569044356001_8613259168285167719_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHOKQ5aa9-i8NkLQDXIsALizs1LNp74HOXOzUs2nvgc5dAl8xixlG-2x-xRme3-Qz0tMD84vcJCcJ1sjfxZomnD&_nc_ohc=3wsv-Z-nxv0Q7kNvwFraOPM&_nc_oc=Admbtl4wmx3mwaU9HHI-kYa5aPpTOb0A14ia1ilZMN6H2EP1vJSzSw9o8UXH0bUf4oo&_nc_zt=23&_nc_ht=scontent.fsgn5-9.fna&_nc_gid=phebk__-14SXsqmAHSXmHA&oh=00_AfP-Chf1JAULMSOjlcD07M0wsX8-P_yCN7D8pllIWBCI0A&oe=6848F736',
+      'https://scontent.fsgn5-15.fna.fbcdn.net/v/t39.30808-6/480686839_647569004356005_8837139071146419915_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeGM2lpDtg8uUlC4nXrLg9D7aIayjck6xklohrKNyTrGSW3NgfuCAyiozkqEcsG65OREfqD2Zcdb84e5RmlU7yeo&_nc_ohc=3S1oS1svrcEQ7kNvwF8ZdFx&_nc_oc=Admjrlq8QXVEW_m2U0vYrPLBjV4UqyogiJ2oDxhYYSWyOBpH4UtA71R9mlr-AAPxaMo&_nc_zt=23&_nc_ht=scontent.fsgn5-15.fna&_nc_gid=gFIzpAeUXI0PrWU5rvO1mQ&oh=00_AfMN1-gdRXbSlBU3jSDov1R5CBzL0IQGMltBCEmhFOWCVA&oe=684908FB',
+      // Bạn có thể thêm nhiều link ảnh khác vào đây!
+    ];
+
+    // Ảnh rơi xuống ngẫu nhiên
+    setInterval(() => {
+      const img = document.createElement('img');
+      // Lấy ngẫu nhiên 1 ảnh trong mảng
+      const randomIndex = Math.floor(Math.random() * fallImages.length);
+      img.src = fallImages[randomIndex];
+      img.className = 'fall-img';
+      img.style.left = Math.random() * (window.innerWidth - 80) + 'px';
+      img.style.width = (60 + Math.random() * 60) + 'px';
+      img.style.height = img.style.width;
+      img.style.animationDuration = (3 + Math.random() * 1.5) + 's';
+      document.body.appendChild(img);
+      setTimeout(() => img.remove(), 5000);
+    }, 800);
+
     // Trái tim rơi xuống nhỏ
     setInterval(() => {
       const heart = document.createElement("div");
@@ -76,22 +112,21 @@
     }, 250);
 
     // Nút đồng ý
-function acceptLove() {
-  Swal.fire({
-    title: '💖',
-    text: "Em là người con gái xinh nhất trong lòng ah",
-    confirmButtonText: 'Yêu lắm luôn!',
-    customClass: {
-      popup: 'swal2-popup'
+    function acceptLove() {
+      Swal.fire({
+        title: '💖',
+        text: "Em là người con gái xinh nhất trong lòng ah",
+        confirmButtonText: 'Yêu lắm luôn!',
+        customClass: {
+          popup: 'swal2-popup'
+        }
+      }).then((result) => {
+        if (result.isConfirmed) {
+          window.close(); // Thoát trang nếu trình duyệt cho phép
+          // window.location.href = "https://google.com";
+        }
+      });
     }
-  }).then((result) => {
-    if (result.isConfirmed) {
-      window.close(); // Thoát trang nếu trình duyệt cho phép
-      // Nếu không được, có thể chuyển hướng:
-      // window.location.href = "https://google.com";
-    }
-  });
-}
 
     // Nút không đồng ý
     function denyLove() {
