--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
     
     // Danh sách các ảnh muốn rơi
     const fallImages = [
-      'https://scontent.fsgn5-9.fna.fbcdn.net/v/t39.30808-6/480937542_647569044356001_8613259168285167719_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHOKQ5aa9-i8NkLQDXIsALizs1LNp74HOXOzUs2nvgc5dAl8xixlG-2x-xRme3-Qz0tMD84vcJCcJ1sjfxZomnD&_nc_ohc=3wsv-Z-nxv0Q7kNvwFraOPM&_nc_oc=Admbtl4wmx3mwaU9HHI-kYa5aPpTOb0A14ia1ilZMN6H2EP1vJSzSw9o8UXH0bUf4oo&_nc_zt=23&_nc_ht=scontent.fsgn5-9.fna&_nc_gid=phebk__-14SXsqmAHSXmHA&oh=00_AfP-Chf1JAULMSOjlcD07M0wsX8-P_yCN7D8pllIWBCI0A&oe=6848F736',
-      'https://scontent.fsgn5-15.fna.fbcdn.net/v/t39.30808-6/480686839_647569004356005_8837139071146419915_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeGM2lpDtg8uUlC4nXrLg9D7aIayjck6xklohrKNyTrGSW3NgfuCAyiozkqEcsG65OREfqD2Zcdb84e5RmlU7yeo&_nc_ohc=3S1oS1svrcEQ7kNvwF8ZdFx&_nc_oc=Admjrlq8QXVEW_m2U0vYrPLBjV4UqyogiJ2oDxhYYSWyOBpH4UtA71R9mlr-AAPxaMo&_nc_zt=23&_nc_ht=scontent.fsgn5-15.fna&_nc_gid=gFIzpAeUXI0PrWU5rvO1mQ&oh=00_AfMN1-gdRXbSlBU3jSDov1R5CBzL0IQGMltBCEmhFOWCVA&oe=684908FB',
+      'img/1.jpg',
+      'img/2.jpg',
+      'img/3.jpg',
     ];
 
     // Ảnh rơi xuống ngẫu nhiên
